--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -81,6 +81,14 @@
         ]
       }
     ],
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "import/no-extraneous-dependencies": [
+      "error", {
+         "devDependencies": false, 
+         "optionalDependencies": false, 
+         "peerDependencies": false, 
+         "packageDir": "./"
+      }
+  ]
   }
 }
