--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
     "@next/font": "13.1.2",
     "@reduxjs/toolkit": "1.9.1",
     "@types/node": "18.11.18",
@@ -19,8 +20,10 @@
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.1",
     "react-redux": "^8.0.5",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^19.0.4",
